--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Longcat: 精選 20 關挑戰</title>
+    <title>Longcat: 邏輯精選 20 關</title>
     <style>
         body {
             display: flex; flex-direction: column; align-items: center;
             background-color: #f7f1e3; font-family: 'Microsoft JhengHei', sans-serif;
-            margin: 0; padding: 20px; min-height: 100vh; transition: 0.5s;
+            margin: 0; padding: 20px; min-height: 100vh;
         }
         .ui-panel {
             background: white; padding: 15px 30px; border-radius: 20px;
@@ -34,23 +34,23 @@
 
 <div id="login-modal" class="login-overlay">
     <div class="ui-panel">
-        <h2>🐱 Longcat 精選挑戰 🐱</h2>
+        <h2>🐱 Longcat 邏輯挑戰 🐱</h2>
         <input type="text" id="username-input" placeholder="輸入玩家名稱" style="padding: 10px; margin-bottom: 10px;">
         <br>
-        <button onclick="userLogin()">進入遊戲</button>
+        <button onclick="userLogin()">開始遊戲</button>
     </div>
 </div>
 
 <div class="ui-panel">
     <h1><span id="display-name">Player</span></h1>
-    <div class="stats">關卡: <span id="lvl-num">1</span> / 20</div>
+    <div class="stats">挑戰關卡: <span id="lvl-num">1</span> / 20</div>
 </div>
 
 <canvas id="gameCanvas"></canvas>
 
 <div style="margin-top:15px; display:flex; gap:10px;">
     <button onclick="resetLevel()">重玩本關</button>
-    <button onclick="logout()" style="background:#aaa;">更換帳號</button>
+    <button onclick="logout()" style="background:#aaa;">換人玩</button>
 </div>
 
 <script>
@@ -63,27 +63,27 @@
     let catPath = [];
     let TILE_SIZE = 60;
 
-    // --- 手動設計 20 關地圖 (0:空地, 1:牆壁, 2:起點) ---
+    // --- 嚴謹設計的 20 關地圖 (0:空地, 1:牆壁, 2:起點) ---
     const ALL_LEVELS = [
         { m: [[2,0,0],[0,1,0],[0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 1
-        { m: [[1,0,0],[0,2,0],[0,0,1]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 2
+        { m: [[1,0,0],[2,0,0],[1,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 2: 修正後
         { m: [[2,0,1],[0,0,0],[1,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 3
-        { m: [[1,0,0,0],[0,2,0,0],[0,0,0,1],[0,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 4
-        { m: [[2,0,0,1],[0,1,0,0],[0,0,0,0],[1,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 5
-        { m: [[0,0,1,0],[1,2,0,0],[0,0,1,0],[0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 6
-        { m: [[0,0,0,0],[0,1,1,0],[0,0,2,0],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 7
-        { m: [[1,0,0,0],[0,0,0,1],[0,1,0,0],[0,0,0,2]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 8
-        { m: [[2,0,0,0,0],[1,1,0,1,0],[0,0,0,0,0],[0,1,1,1,0],[0,0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 9
-        { m: [[0,0,1,0,0],[0,2,0,0,0],[1,0,1,0,1],[0,0,0,0,0],[0,0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 10
-        { m: [[2,0,0,0,0,0],[0,1,1,1,1,0],[0,0,0,0,0,0],[0,1,1,1,1,0],[0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 11
-        { m: [[0,0,0,0,0,1],[0,1,1,1,0,0],[2,0,0,0,0,0],[0,1,1,1,0,0],[0,0,0,0,0,1]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 12
-        { m: [[1,0,0,0,0,1],[0,0,1,1,0,0],[0,1,2,0,0,0],[0,0,1,1,0,0],[1,0,0,0,0,1]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 13
-        { m: [[0,0,0,0,1,0],[0,2,1,0,0,0],[0,0,0,0,1,0],[1,1,1,0,0,0],[0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 14
-        { m: [[2,0,0,0,0,0,0],[0,1,1,1,1,1,0],[0,0,0,0,0,0,0],[0,1,1,1,1,1,0],[0,0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 15
-        { m: [[0,0,0,0,0,0,1],[0,1,1,0,1,0,0],[0,1,2,0,1,0,0],[0,1,1,0,1,0,0],[0,0,0,0,0,0,1]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 16
-        { m: [[2,0,0,1,0,0,0],[0,1,0,0,0,1,0],[0,0,0,1,0,0,0],[1,0,1,0,1,0,1],[0,0,0,0,0,0,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 17
-        { m: [[0,0,0,0,0,0,0],[0,1,1,0,1,1,0],[0,1,0,0,0,1,0],[0,0,0,2,0,0,0],[0,1,1,0,1,1,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 18
-        { m: [[0,0,0,0,0,0,0,0],[0,1,1,1,1,1,1,0],[0,0,0,0,0,0,0,0],[0,1,1,1,1,1,1,0],[0,0,0,0,0,0,0,2]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 19
+        { m: [[0,0,1,0],[0,0,0,0],[1,0,2,0],[0,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 4
+        { m: [[2,0,0,1],[0,0,1,0],[0,1,0,0],[1,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, // 5
+        { m: [[0,0,1,0],[0,2,0,0],[1,0,1,0],[0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 6
+        { m: [[0,0,0,0],[1,1,0,0],[0,0,2,0],[0,1,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 7
+        { m: [[0,0,0,1],[1,0,0,0],[0,0,2,0],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 8
+        { m: [[0,0,0,0,1],[0,1,1,0,0],[2,0,0,0,0],[0,1,1,0,1],[0,0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 9
+        { m: [[1,0,0,0,0],[0,0,2,0,1],[0,0,1,0,0],[0,1,0,0,0],[0,0,0,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} }, // 10
+        { m: [[2,0,0,0,0,0],[1,1,1,1,1,0],[0,0,0,0,0,0],[0,1,1,1,1,1],[0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 11
+        { m: [[0,0,0,0,0,1],[1,1,1,0,0,0],[2,0,0,0,1,1],[0,0,0,0,0,0],[0,1,1,1,1,1]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 12
+        { m: [[0,0,1,0,0,0],[0,1,0,0,2,0],[0,0,0,1,0,0],[0,1,0,0,0,0],[0,0,0,0,1,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 13
+        { m: [[2,0,0,0,0,1],[0,1,1,1,0,0],[0,0,0,0,0,0],[1,1,1,1,1,0],[0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 14
+        { m: [[0,0,0,0,0,0,0],[0,1,1,1,1,1,0],[2,0,0,0,0,0,0],[0,1,1,1,1,1,0],[0,0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} }, // 15
+        { m: [[0,0,0,0,0,0,1],[0,1,1,0,1,1,0],[0,1,2,0,1,1,0],[0,1,1,0,1,1,0],[0,0,0,0,0,0,1]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 16
+        { m: [[2,0,0,1,0,0,0],[0,1,0,1,0,1,0],[0,0,0,0,0,0,0],[1,0,1,0,1,0,1],[0,0,0,0,0,0,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 17
+        { m: [[0,0,0,0,0,0,0],[0,1,1,0,1,1,0],[0,0,0,0,0,0,0],[0,1,1,0,1,1,0],[0,0,0,2,0,0,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 18
+        { m: [[0,0,0,0,0,0,0,0],[0,1,1,1,1,1,1,0],[0,0,0,0,0,0,0,0],[0,1,1,1,1,1,1,0],[2,0,0,0,0,0,0,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }, // 19
         { m: [[2,0,0,0,0,0,0,0],[0,1,0,1,0,1,0,1],[0,0,0,0,0,0,0,0],[1,0,1,0,1,0,1,0],[0,0,0,0,0,0,0,0]], t: {bg:"#706fd3", w:"💎", s:"🐲"} }  // 20
     ];
 
@@ -91,7 +91,7 @@
         const name = document.getElementById('username-input').value.trim();
         if(!name) return;
         currentUser = name;
-        const saved = JSON.parse(localStorage.getItem('lc_20fixed_'+name)) || {lvl:1};
+        const saved = JSON.parse(localStorage.getItem('lc_20fixed_v2_'+name)) || {lvl:1};
         currentLvl = Math.min(saved.lvl, 20);
         document.getElementById('login-modal').style.display = 'none';
         document.getElementById('display-name').innerText = name;
@@ -112,7 +112,7 @@
                 }
             }
         }
-        TILE_SIZE = Math.min(65, (window.innerHeight*0.5)/grid.length);
+        TILE_SIZE = Math.min(60, (window.innerHeight*0.55)/grid.length);
         canvas.width = grid[0].length * TILE_SIZE;
         canvas.height = grid.length * TILE_SIZE;
         document.getElementById('lvl-num').innerText = currentLvl;
@@ -158,10 +158,10 @@
             setTimeout(() => {
                 if(currentLvl < 20) {
                     currentLvl++;
-                    localStorage.setItem('lc_20fixed_'+currentUser, JSON.stringify({lvl:currentLvl}));
+                    localStorage.setItem('lc_20fixed_v2_'+currentUser, JSON.stringify({lvl:currentLvl}));
                     initLevel();
                 } else {
-                    alert("萬歲！你通關了所有精選 20 關！");
+                    alert("你是邏輯大師！20 關全部通關！");
                 }
             }, 200);
         }
