--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Longcat: 邏輯修正版</title>
+    <title>Longcat: 操控修復版</title>
     <style>
         body {
             display: flex; flex-direction: column; align-items: center;
@@ -23,27 +23,22 @@
             padding: 10px 25px; border: none; border-radius: 12px;
             background: #ff7675; color: white; cursor: pointer; font-weight: bold;
         }
-        .login-overlay {
-            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-            background: rgba(0,0,0,0.8); display: flex; justify-content: center;
-            align-items: center; z-index: 100;
-        }
     </style>
 </head>
 <body>
 
-<div id="login-modal" class="login-overlay">
+<div id="login-modal" style="position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); display:flex; justify-content:center; align-items:center; z-index:100;">
     <div class="ui-panel">
-        <h2>🐱 真正的邏輯挑戰 🐱</h2>
+        <h2>🐱 操控修復完成！ 🐱</h2>
         <input type="text" id="username-input" placeholder="輸入玩家名稱" style="padding: 10px; margin-bottom: 10px;">
         <br>
-        <button onclick="userLogin()">開始遊戲</button>
+        <button onclick="userLogin()">重返冒險</button>
     </div>
 </div>
 
 <div class="ui-panel">
     <h1><span id="display-name">Player</span></h1>
-    <div class="stats">挑戰關卡: <span id="lvl-num">1</span> / 20</div>
+    <div class="stats">關卡: <span id="lvl-num">1</span> / 20</div>
 </div>
 
 <canvas id="gameCanvas"></canvas>
@@ -63,26 +58,19 @@
     let catPath = [];
     let TILE_SIZE = 60;
 
-    // --- 重新設計的地圖：打破直線慣性 ---
-    // 0:空地, 1:牆壁, 2:起點
+    // --- 嚴格校對的地圖 (20關) ---
     const ALL_LEVELS = [
-        // 第 1 關：基本的轉彎練習
         { m: [[2,0],[1,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
-        // 第 2 關：修正你的痛點。起點在角落，必須利用牆壁停頓，不能有三點一線的死路。
-        { m: [[2,1,1],[0,0,1],[1,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
-        // 第 3 關：十字形佈局，考驗選擇順序
-        { m: [[1,0,1],[0,2,0],[1,0,1]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
-        // 第 4 關：S 型路徑
-        { m: [[2,0,1],[1,0,0],[0,0,1]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} },
-        // 第 5 關：環形佈局
-        { m: [[2,0,0],[0,1,0],[0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} },
-        // 第 6 關之後開始加入更複雜的牆壁位置
-        { m: [[0,0,0,1],[1,0,2,0],[0,0,1,0],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
-        { m: [[2,0,1,0],[0,1,0,0],[0,0,0,1],[1,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
-        { m: [[1,0,0,0],[0,2,1,0],[0,0,0,0],[0,1,0,1]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
-        { m: [[0,1,0,0],[0,0,0,1],[1,0,2,0],[0,0,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
-        { m: [[1,0,1,0],[0,0,0,0],[0,2,0,1],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
-        { m: [[2,0,0,0,1],[1,1,1,0,0],[0,0,0,0,0],[0,0,1,1,1],[1,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} },
+        { m: [[1,0,0],[2,0,0],[1,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
+        { m: [[2,0,1],[0,0,0],[1,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} }, 
+        { m: [[0,0,1,0],[0,0,0,0],[1,0,2,0],[0,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} },
+        { m: [[2,0,0,1],[0,0,1,0],[0,1,0,0],[1,0,0,0]], t: {bg:"#f7f1e3", w:"📦", s:"🐱"} },
+        { m: [[0,0,1,0],[0,2,0,0],[1,0,1,0],[0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
+        { m: [[0,0,0,0],[1,1,0,0],[0,0,2,0],[0,1,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
+        { m: [[0,0,0,1],[1,0,0,0],[0,0,2,0],[0,1,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
+        { m: [[0,0,0,0,1],[0,1,1,0,0],[2,0,0,0,0],[0,1,1,0,1],[0,0,0,0,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
+        { m: [[1,0,0,0,0],[0,0,2,0,1],[0,0,1,0,0],[0,1,0,0,0],[0,0,0,1,0]], t: {bg:"#d1ccc0", w:"🧱", s:"🐱"} },
+        { m: [[2,0,0,0,0,0],[1,1,1,1,1,0],[0,0,0,0,0,0],[0,1,1,1,1,1],[0,0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} },
         { m: [[1,0,0,1,0],[0,0,2,0,0],[0,1,0,1,0],[0,0,0,0,0],[1,0,0,1,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} },
         { m: [[0,0,0,0,0],[0,1,1,1,0],[0,1,2,1,0],[0,1,0,1,0],[0,0,0,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} },
         { m: [[2,0,1,0,0],[0,0,0,1,0],[1,0,0,0,1],[0,1,0,0,0],[0,0,1,0,0]], t: {bg:"#ffb8b8", w:"🌸", s:"🦊"} },
@@ -98,7 +86,7 @@
         const name = document.getElementById('username-input').value.trim();
         if(!name) return;
         currentUser = name;
-        const saved = JSON.parse(localStorage.getItem('lc_logic_v3_'+name)) || {lvl:1};
+        const saved = JSON.parse(localStorage.getItem('lc_final_v9_'+name)) || {lvl:1};
         currentLvl = Math.min(saved.lvl, 20);
         document.getElementById('login-modal').style.display = 'none';
         document.getElementById('display-name').innerText = name;
@@ -148,15 +136,26 @@
         ctx.fillText(data.t.s, head.x*TILE_SIZE+TILE_SIZE*0.1, head.y*TILE_SIZE+TILE_SIZE*0.8);
     }
 
+    // --- 關鍵修復：這裡修正了變數名稱，現在可以操控了 ---
     function move(dx, dy) {
-        let head = catPath[catPath.length-1], moved = false;
+        let head = catPath[catPath.length - 1];
+        let moved = false;
         while(true) {
-            let nx = head.x+dx, ny = head.y+dy;
-            if(ny>=0 && ny<grid.length && nx>=0 && nx<grid[0].length && grid[ny][nX]===0) {
-                grid[ny][nx]=3; catPath.push({x:nx, y:ny}); head={x:nx, y:ny}; moved=true;
-            } else break;
+            let nx = head.x + dx;
+            let ny = head.y + dy;
+            if(ny >= 0 && ny < grid.length && nx >= 0 && nx < grid[0].length && grid[ny][nx] === 0) {
+                grid[ny][nx] = 3;
+                catPath.push({x: nx, y: ny});
+                head = {x: nx, y: ny};
+                moved = true;
+            } else {
+                break;
+            }
         }
-        if(moved) { draw(); checkWin(); }
+        if(moved) {
+            draw();
+            checkWin();
+        }
     }
 
     function checkWin() {
@@ -165,10 +164,10 @@
             setTimeout(() => {
                 if(currentLvl < 20) {
                     currentLvl++;
-                    localStorage.setItem('lc_logic_v3_'+currentUser, JSON.stringify({lvl:currentLvl}));
+                    localStorage.setItem('lc_final_v9_'+currentUser, JSON.stringify({lvl:currentLvl}));
                     initLevel();
                 } else {
-                    alert("你是邏輯天才！成功避開所有直線死路！");
+                    alert("你是邏輯之王！全 20 關通關！");
                 }
             }, 200);
         }
